# DEPRECATED-agl-identity-agent

./: CMakeLists.txt  README.md  agl-identity-agent.service.in
binding/: CMakeLists.txt  agl-curl.c  agl-identity-binding.c  aia-get.c  authorization.c  authorization.h  base64.c  base64.h  config.json  curl-wrap.c  curl-wrap.h  oidc-agent.c  oidc-agent.h  u2f-bluez.c  u2f-bluez.h  u2f-bt.c  u2f-bt.h  u2f-protocol.c  u2f-protocol.h
fido-u2f-1.1/: fido-appid-and-facets-v1.1-rd-20160915.html  fido-ecdaa-algorithm-v1.1-rd-20160915.html  fido-glossary-v1.1-rd-20160915.html  fido-metadata-service-v1.1-rd-20160915.html  fido-metadata-statement-v1.1-rd-20160915.html  fido-registry-v1.1-rd-20160915.html  fido-security-ref-v1.1-rd-20160915.html  fido-u2f-README-v1.1-rd-20160915.txt  fido-u2f-authenticator-transports-extension-v1.1-rd-20160915.html  fido-u2f-bt-protocol-v1.1-rd-20160915.html  fido-u2f-hid-protocol-v1.1-rd-20160915.html  fido-u2f-implementation-considerations-v1.1-rd-20160915.html  fido-u2f-javascript-api-v1.1-rd-20160915.html  fido-u2f-nfc-protocol-v1.1-rd-20160915.html  fido-u2f-overview-v1.1-rd-20160915.html  fido-u2f-raw-message-formats-v1.1-rd-20160915.html
fido-u2f-1.1/resources/: fido-refs.js  respec-fido-common.js
src/: Makefile  main.c  register.log.txt  u2f-bluez.c  u2f-bluez.h  u2f-bt.c  u2f-bt.h  u2f-crypto.c  u2f-crypto.h  u2f-protocol.c  u2f-protocol.h  vasco-digipass.rules
